[package]
name = "ondo-gm"
version = "0.1.0"
description = "Ondo Finance Global Markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ondo_gm"

[features]
default = ["localnet"]
localnet = []
devnet = []
testnet = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["interface-instructions", "init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }
solana-sdk-ids = "2.2.1"
solana-keccak-hasher = "2.2.1"

pyth-solana-receiver-sdk ="0.6.1"
solana-security-txt = "1.1.2"

[dev-dependencies]
proptest = "1.4"
